cmake_minimum_required(VERSION 3.11)
project(dfs)
add_executable(dfs main.cpp arguments.cpp graph.cpp log.cpp)
set_property(TARGET dfs PROPERTY CXX_STANDARD 17)

find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
else()
	message(WARNING "OpenMP support was not found! Multithreading functionality will be missing!")
endif()
